--- a/NYTD.App/App.xaml
+++ b/NYTD.App/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:NYTD.App"
-             xmlns:appConverters="clr-namespace:NYTD.App.Converters">
+             xmlns:appConverters="clr-namespace:NYTD.App.Converters"
+             ShutdownMode="OnExplicitShutdown">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
