--- a/NYTD.App/Converters/ConverterDictionary.xaml
+++ b/NYTD.App/Converters/ConverterDictionary.xaml
@@ -2,4 +2,5 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:NYTD.App.Converters">
     <local:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
+    <local:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 </ResourceDictionary>
