--- a/NYTD.App/Views/SearchView.xaml
+++ b/NYTD.App/Views/SearchView.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:NYTD.App.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
+             xmlns:cal="http://www.caliburnproject.org"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              
              
@@ -15,7 +16,7 @@
              TextElement.FontSize="14"
              FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
     <materialDesign:ColorZone
-        Mode="PrimaryLight"
+        Mode="Standard"
         VerticalAlignment="Stretch"
         Padding="10">
         <Grid>
@@ -24,26 +25,39 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
+            <Grid>
+                
+            </Grid>
+            
             <materialDesign:ColorZone
                 Mode="Standard"
                 CornerRadius="2"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Stretch"
                 Margin="10"
-                materialDesign:ShadowAssist.ShadowDepth="Depth1">
+                materialDesign:ShadowAssist.ShadowDepth="Depth5">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
                     <Button Style="{DynamicResource MaterialDesignToolButton}"
-                            Margin="5,0,0,0">
+                            Margin="5,0,0,0"
+                            IsEnabled="False"
+                            Opacity="1">
                         <materialDesign:PackIcon Kind="Magnify"
                                                  Opacity=".56"
                                                  Width="24"
                                                  Height="24"/>
                     </Button>
-                    <TextBox Grid.Column="1"
+                    <TextBox x:Name="SearchBox"
+                             Grid.Column="1"
                              Margin="8 0 0 0"
                              materialDesign:HintAssist.Hint="Search" 
                              materialDesign:TextFieldAssist.DecorationVisibility="Hidden"
@@ -51,9 +65,65 @@
                              MinWidth="200"
                              VerticalAlignment="Center"
                              FontSize="26"/>
+                    <Button Style="{DynamicResource MaterialDesignToolButton}"
+                            Grid.Column="2"
+                            Margin="5,0,5,0">
+                        <materialDesign:PackIcon Kind="CloseCircle"
+                                                 Opacity=".56"
+                                                 Width="24"
+                                                 Height="24"/>
+                    </Button>
+                    <ToggleButton x:Name="FilterToggle"
+                                  Grid.Column="3"
+                                  DockPanel.Dock="Left"
+                                  Style="{StaticResource MaterialDesignFlatToggleButton}"
+                                  Margin="10,0">
+                        <materialDesign:PackIcon Kind="Filter" Height="21" Width="21" />
+                    </ToggleButton>
+
+                    <Grid Grid.Row="1"
+                          Grid.ColumnSpan="4">
+                        <Grid Visibility="{Binding IsChecked, ElementName=FilterToggle, Converter={StaticResource BooleanToVisibilityConverter}}">
+                            
+                        </Grid>
+                        <Grid.Style>
+                            <Style TargetType="Grid">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsChecked, ElementName=FilterToggle, Converter={StaticResource BooleanToVisibilityConverter}}" Value="Visible">
+                                        <DataTrigger.EnterActions>
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <DoubleAnimation Storyboard.TargetProperty="Height" From="0" To="100" Duration="0:0:.3" AccelerationRatio=".2" DecelerationRatio=".8"/>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </DataTrigger.EnterActions>
+                                        <DataTrigger.ExitActions>
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <DoubleAnimation Storyboard.TargetProperty="Height" From="100" To="0" Duration="0:0:.3" AccelerationRatio=".2" DecelerationRatio=".8"/>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </DataTrigger.ExitActions>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Grid.Style>
+                        
+                        
+                        
+                    </Grid>
+                    
                 </Grid>
             </materialDesign:ColorZone>
-
+            <materialDesign:ColorZone
+                Grid.Row="1"
+                Mode="Standard"
+                CornerRadius="2"
+                VerticalAlignment="Stretch"
+                HorizontalAlignment="Stretch"
+                Margin="10"
+                materialDesign:ShadowAssist.ShadowDepth="Depth5">
+            </materialDesign:ColorZone>
         </Grid>
     </materialDesign:ColorZone>
 </UserControl>
