--- a/NYTD.App/Views/ShellView.xaml
+++ b/NYTD.App/Views/ShellView.xaml
@@ -1,9 +1,11 @@
 <Window x:Class="NYTD.App.Views.ShellView"
+        x:Name="Window"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:cal="http://www.caliburnproject.org"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+        xmlns:bot="clr-namespace:PixelLab.Wpf.Transitions;assembly=PixelLab.Wpf"
+        xmlns:controls="clr-namespace:NYTD.Controls;assembly=NYTD.Controls"
         
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         Background="{DynamicResource MaterialDesignPaper}"
@@ -12,71 +14,77 @@
         FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
         
         Title="{Binding Title}"
-        WindowStartupLocation="CenterScreen">
+        WindowState="{Binding WindowState}"
+        WindowStartupLocation="CenterScreen"
+        AllowsTransparency="True"
+        WindowStyle="None">
 
     <Grid Background="White">
         <materialDesign:DialogHost Identifier="RootDialog">
-            <materialDesign:DrawerHost
-                IsLeftDrawerOpen="{Binding IsChecked, ElementName=LeftPanelToggle}">
-                <materialDesign:DrawerHost.LeftDrawerContent>
-                    <DockPanel MinWidth="250">
-                        <materialDesign:ColorZone
-                            Padding="10"
-                            Mode="PrimaryDark"
-                            DockPanel.Dock="Top">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="5*"/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                                <TextBlock
-                                        Text="NYTD"
-                                        FontSize="20"
-                                        HorizontalAlignment="Center"
-                                        VerticalAlignment="Center"/>
-                                <ToggleButton
-                                    IsChecked="{Binding IsChecked, ElementName=LeftPanelToggle}"
-                                    Grid.Column="1"
-                                    Style="{StaticResource MaterialDesignHamburgerToggleButton}"
-                                    Margin="10,0"/>
-                            </Grid>
-                        </materialDesign:ColorZone>
-                        <TreeView ItemContainerStyle="{StaticResource Menu_TreeView}">
-                        </TreeView>
-                    </DockPanel>
-                </materialDesign:DrawerHost.LeftDrawerContent>
+            <materialDesign:DrawerHost>
                 <DockPanel>
                     <materialDesign:ColorZone
-                            Padding="10"
                             materialDesign:ShadowAssist.ShadowDepth="Depth2"
                             Mode="PrimaryMid"
                             DockPanel.Dock="Top">
-                        <DockPanel>
-                            <ToggleButton
-                                x:Name="LeftPanelToggle"
-                                DockPanel.Dock="Left"
-                                Style="{StaticResource MaterialDesignHamburgerToggleButton}"
-                                Margin="10,0"/>
-                            <materialDesign:PopupBox
-                                DockPanel.Dock="Right"
-                                PlacementMode="BottomAndAlignRightEdges"
-                                StaysOpen="False">
-                                <StackPanel>
-                                    <ListView Visibility="{Binding CurrentPageOptions, Converter={StaticResource NullToVisibilityConverter}}"
-                                              ItemContainerStyle="{StaticResource OptionsMenu_ListViewItem}"/>
-                                    <Separator Visibility="{Binding CurrentPageOptions, Converter={StaticResource NullToVisibilityConverter}}"/>
-                                    <ListView ItemsSource="{Binding FixedOptions}"
-                                              ItemContainerStyle="{StaticResource OptionsMenu_ListViewItem}"/>
-                                </StackPanel>
-                            </materialDesign:PopupBox>
-                            <TextBlock
-                                Text="NYTD"
-                                FontSize="20"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                        </DockPanel>
+                        <Grid>
+                            <DockPanel>
+                                <TextBlock x:Name="Title"
+                                    FontSize="20"
+                                    Margin="10"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                            </DockPanel>
+                            <Grid HorizontalAlignment="Right"
+                                  Margin="0,0,10,0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <Button x:Name="MinimizeButton"
+                                            Style="{StaticResource MaterialDesignRaisedButton}"
+                                            materialDesign:ShadowAssist.ShadowDepth="Depth0"
+                                            Grid.Column="0"
+                                            Padding="0">
+                                    <materialDesign:PackIcon Kind="WindowMinimize"
+                                                                 Margin="0"
+                                                                 Width="30"
+                                                                 Height="30"/>
+                                </Button>
+                                <Button x:Name="MaximizeButton"
+                                            Style="{StaticResource MaterialDesignRaisedButton}"
+                                            materialDesign:ShadowAssist.ShadowDepth="Depth0"
+                                            Grid.Column="1"
+                                            Padding="0">
+                                    <materialDesign:PackIcon Kind="{Binding WindowMaximizeIcon}"
+                                                                 Margin="0"
+                                                                 Width="30"
+                                                                 Height="30"/>
+                                </Button>
+                                <Button cal:Message.Attach="CloseButton($view)"
+                                            CommandParameter="{Binding ElementName=Window}"
+                                            Style="{StaticResource MaterialDesignRaisedButton}"
+                                            materialDesign:ShadowAssist.ShadowDepth="Depth0"
+                                            Grid.Column="2"
+                                            Padding="0">
+                                    <materialDesign:PackIcon Kind="WindowClose"
+                                                                 Margin="0"
+                                                                 Width="30"
+                                                                 Height="30"/>
+                                </Button>
+                            </Grid>
+                        </Grid>
                     </materialDesign:ColorZone>
-                    <ContentControl x:Name="ActiveScreen"/>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <controls:MenuControl/>
+                        <ContentControl x:Name="ActiveItem"
+                                        Grid.Column="1"/>
+                    </Grid>
                 </DockPanel>
             </materialDesign:DrawerHost>
         </materialDesign:DialogHost>
