--- a/NYTD.App/Views/SearchView.xaml
+++ b/NYTD.App/Views/SearchView.xaml
@@ -9,6 +9,8 @@
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:controls="clr-namespace:NYTD.Controls;assembly=NYTD.Controls"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:wpfCommon="clr-namespace:NYTD.App.WpfCommon"
              
              
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
@@ -59,17 +61,8 @@
                                     Background="Transparent">
                                 <materialDesign:PackIcon Height="24" Width="24" Kind="Magnify"/>
                             </Button>
-                            <!--<Button Style="{DynamicResource MaterialDesignRaisedLightButton}"
-                                    IsEnabled="True"
-                                    Margin="5,0,0,0"
-                                    Opacity="1"
-                                    Background="Transparent">
-                                <materialDesign:PackIcon Kind="Magnify"
-                                                 Opacity=".56"
-                                                 Width="24"
-                                                 Height="24"/>
-                            </Button>-->
                             <TextBox x:Name="SearchBox"
+                                     Text="{Binding SearchBox, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                      Grid.Column="1"
                                      Margin="8 0 0 0"
                                      materialDesign:HintAssist.Hint="Search" 
@@ -77,7 +70,9 @@
                                      BorderThickness="0"
                                      MinWidth="200"
                                      VerticalAlignment="Center"
-                                     FontSize="26"/>
+                                     FontSize="26"
+                                     IsEnabled="{Binding IsSearching, Converter={StaticResource InverseBooleanConverter}}"
+                                     cal:Message.Attach="[Event KeyDown] = [Action SearchBoxKeyPressed($eventArgs)]"/>
                             <Button Style="{DynamicResource MaterialDesignToolButton}"
                                     Grid.Column="2"
                                     Margin="5,0,5,0">
@@ -98,6 +93,27 @@
                 HorizontalAlignment="Stretch"
                 Margin="10"
                 materialDesign:ShadowAssist.ShadowDepth="Depth5">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition Height="30"/>
+                    </Grid.RowDefinitions>
+                    <ListView x:Name="ResultList"
+                              ItemTemplateSelector="{StaticResource SearchListDataTemplateSelector}"
+                              ScrollViewer.CanContentScroll="False"
+                              ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                        <i:Interaction.Triggers>
+                            <wpfCommon:RoutedEventTrigger RoutedEvent="ScrollViewer.ScrollChanged">
+                                <cal:ActionMessage MethodName="Scroll">
+                                    <cal:Parameter Value="$eventargs" />
+                                </cal:ActionMessage>
+                            </wpfCommon:RoutedEventTrigger>
+                        </i:Interaction.Triggers>
+                    </ListView>
+
+                    <TextBlock Grid.Row="1" Text="{Binding ResultList.Count}" HorizontalAlignment="Right"/>
+
+                </Grid>
             </materialDesign:ColorZone>
         </Grid>
     </materialDesign:ColorZone>
